<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation_admin"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_inicio_a">

    <fragment
        android:id="@+id/nav_inicio_a"
        android:name="com.vaxwe.lencareapp.ui.admin.inicio_admin.InicioFragmentA"
        android:label="@string/menu_inicio_admin"
        tools:layout="@layout/fragment_inicio_a" />
    <fragment
        android:id="@+id/nav_mi_cuenta_a"
        android:name="com.vaxwe.lencareapp.ui.admin.perfil_admin.PerfilFragmentA"
        android:label="@string/menu_mi_cuenta_admin"
        tools:layout="@layout/fragment_perfil_a" />
    <fragment
        android:id="@+id/nav_categorias_a"
        android:name="com.vaxwe.lencareapp.ui.admin.categorias_admin.CategoriasFragmentA"
        android:label="@string/menu_categorias_admin"
        tools:layout="@layout/fragment_categorias_a" />
    <fragment
        android:id="@+id/nav_registro_a"
        android:name="com.vaxwe.lencareapp.ui.admin.registrar_users.RegistarFragmentA"
        android:label="@string/menu_registrar_admin"
        tools:layout="@layout/fragment_registar_a" />
    <fragment
        android:id="@+id/nav_lista_a"
        android:name="com.vaxwe.lencareapp.ui.admin.lista_users.ListaFragmentA"
        android:label="@string/menu_listar_admin"
        tools:layout="@layout/fragment_lista_a" />
    <fragment
        android:id="@+id/nav_verpn_a"
        android:name="com.vaxwe.lencareapp.ui.admin.consultar_pn_admin.ConsultarFragmentA"
        android:label="@string/menu_consultar_pn_admin"
        tools:layout="@layout/fragment_consultar_a" />

</navigation>