<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_cliente"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.vaxwe.lencareapp.ui.cliente.inicio_cliente.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_mi_cuenta"
        android:name="com.vaxwe.lencareapp.ui.cliente.perfil_cliente.GalleryFragment"
        android:label="@string/menu_mi_cuenta"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_favoritos"
        android:name="com.vaxwe.lencareapp.ui.cliente.favoritos_cliente.SlideshowFragment"
        android:label="@string/menu_favoritos"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/DetallesApp"
        android:name="com.vaxwe.lencareapp.ui.cliente.detalles_cliente.DetallesFragment"
        android:label="@string/menu_detalles_app"
        tools:layout="@layout/fragment_detalles" />
    <fragment
        android:id="@+id/InfoView"
        android:name="com.vaxwe.lencareapp.ui.cliente.info_cliente.InfoFragment"
        android:label="@string/menu_mas_info"
        tools:layout="@layout/fragment_info" />

</navigation>